--- a/IoCContainer/IoCContainer.csproj
+++ b/IoCContainer/IoCContainer.csproj
@@ -41,12 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IContainer.cs" />
     <Compile Include="IoCContainer.cs" />
+    <Compile Include="IResolveStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strategy\CreateNewConcreteObjectStrategy.cs" />
+    <Compile Include="Strategy\CreateNewSingletonObjectStrategy.cs" />
+    <Compile Include="Strategy\MasterResolveStrategy.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
