--- a/SEPFramework/SEPFramework.csproj
+++ b/SEPFramework/SEPFramework.csproj
@@ -5,4 +5,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IoCContainer\IoCContainer.csproj" />
+  </ItemGroup>
+
 </Project>
